--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,17 @@
 }
 
 body {
-    background: linear-gradient(90deg, #d53369 0%, #daae51 100%);
+    background-color: rgb(26, 26, 26);
+    color: white;
+}
+
+#app {
+    display: flex;
+    justify-content: center;
 }
 
 .container-fluid {
-    width: 60%;
-    margin-left: 20%;
+    width: 80%;
 }
 
 .container-fluid ul {
@@ -20,6 +25,40 @@ body {
     list-style: none;
 }
 
+.container-fluid ul li {
+    margin-top: 3rem;
+    padding: 1rem;
+}
+
 .card {
-    width: calc(100%/3);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: calc(90%/4);
+    height: 320px;
+    background: linear-gradient(90deg, #ffed9e 0%, #d1a618 100%);
+    border-radius: 20px;
+    box-shadow:
+    0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+    0 6.7px 5.3px rgba(0, 0, 0, 0.048),
+    0 12.5px 10px rgba(0, 0, 0, 0.06),
+    0 22.3px 17.9px rgba(0, 0, 0, 0.072),
+    0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+    0 100px 80px rgba(0, 0, 0, 0.12);
+}
+
+.card img {
+    max-height: 200px;
+    border-radius: 20px;
+    box-shadow:
+    0 1.4px 1.2px rgba(0, 0, 0, 0.034),
+    0 3.7px 2.3px rgba(0, 0, 0, 0.048),
+    0 6.5px 5px rgba(0, 0, 0, 0.06),
+    0 11.3px 9.9px rgba(0, 0, 0, 0.072),
+    0 20.8px 16.4px rgba(0, 0, 0, 0.086),
+    0 50px 40px rgba(0, 0, 0, 0.12);
+}
+
+.sub-card {
+    text-align: right;
 }
