tv shows printed

--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,35 @@ body {
     0 50px 40px rgba(0, 0, 0, 0.12);
 }
 
+.card-tvshow {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: calc(90%/4);
+    height: 320px;
+    background: linear-gradient(90deg, #6814b6 0%, #5112ff 100%);
+    border-radius: 20px;
+    box-shadow:
+    0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+    0 6.7px 5.3px rgba(0, 0, 0, 0.048),
+    0 12.5px 10px rgba(0, 0, 0, 0.06),
+    0 22.3px 17.9px rgba(0, 0, 0, 0.072),
+    0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+    0 100px 80px rgba(0, 0, 0, 0.12);
+}
+
+.card-tvshow > img:nth-of-type(1) {
+    max-height: 200px;
+    border-radius: 20px;
+    box-shadow:
+    0 1.4px 1.2px rgba(0, 0, 0, 0.034),
+    0 3.7px 2.3px rgba(0, 0, 0, 0.048),
+    0 6.5px 5px rgba(0, 0, 0, 0.06),
+    0 11.3px 9.9px rgba(0, 0, 0, 0.072),
+    0 20.8px 16.4px rgba(0, 0, 0, 0.086),
+    0 50px 40px rgba(0, 0, 0, 0.12);
+}
+
 .sub-card {
     text-align: right;
 }
